# 2d_RPG_demo

./: .gitignore  CMakeLists.txt  README.md
Game/: CMakeLists.txt
Game/include/: AI.h  Audio.h  CollisionSystem.h  CommandQueue.h  ECSystem.h  Engine.h  Entity.h  Enums.h  Events.h  Globals.h  Gui.h  Helpers.h  LDtk_Headers.h  Layer.h  Level.h  Macroses.h  NavSystem.h  Object.h  Physics.h  SFML_Headers.h  STD_Headers.h  Structs.h  Tag.h  TileMap.h  precompiled.h
Game/include/Components/: ActorController.h  ActorState.h  AnimatedSprite.h  CollisionBox.h  Component.h  Navigation.h  PhysicsBox.h  PlayerController.h  SimpleImage.h  Sound.h
Game/include/State/: State.h  StateMachine.h  StatePlay.h  StateSettings.h  StateTitle.h
Game/src/: AI.cpp  Audio.cpp  CollisionSystem.cpp  CommandQueue.cpp  ECSystem.cpp  Engine.cpp  Entity.cpp  Enums.cpp  Events.cpp  Game.cpp  Gui.cpp  Helpers.cpp  Layer.cpp  Level.cpp  NavSystem.cpp  Object.cpp  Physics.cpp  Tag.cpp  TileMap.cpp
Game/src/Components/: ActorController.cpp  ActorState.cpp  AnimatedSprite.cpp  CollisionBox.cpp  Component.cpp  Navigation.cpp  PhysicsBox.cpp  PlayerController.cpp  SimpleImage.cpp  Sound.cpp
Game/src/State/: State.cpp  StateMachine.cpp  StatePlay.cpp  StateSettings.cpp  StateTitle.cpp
Game/unused/: Container.cpp  Container.h  Context.cpp  Context.h  SkeletalAnimation.cpp  SkeletalAnimation.h  StateStack.cpp  StateStack.h
